--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
 <app-estruturas-repeticao></app-estruturas-repeticao>
 
 <app-functions-typescript></app-functions-typescript>
+
+<app-change-data></app-change-data>
+
+<app-form-dynamic></app-form-dynamic>
